deploy/allowance-fun-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allowance-fun-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: allowance-fun-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: allowance-fun-web-pod
      labels:
        app: allowance-fun-web
    spec:
      containers:
        - image: allowancedotfun/allowance-fun-web:1.0.0-17
          name: web-server
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
