deploy/allowance-fun-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: allowance-fun-web-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: allowance-fun-web
